Actualizando banners y modal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>ALUCINNA Argentina <img src="img/oficial 1.svg" alt=""></h1>
 
         <a href="https://alucinna.com.ar/?utm_source=Smartlink_EcommerceLabAgency&utm_medium=Smartlink_EcommerceLabAgency&utm_campaign=Smartlink_EcommerceLabAgency&utm_id=Smartlink_EcommerceLabAgency&utm_term=Smartlink_EcommerceLabAgency&utm_content=Smartlink_EcommerceLabAgency" target="_blank" class="banner">
-            <img class="img-banner" src="img/banner alucinna.webp" alt="Banner">
+            <img class="img-banner" src="img/banner-alucinna.png" alt="Banner">
         </a>
         
         <a href="https://alucinna.com.ar/final-sale/?utm_source=Smartlink_EcommerceLabAgency&utm_medium=Smartlink_EcommerceLabAgency&utm_campaign=Smartlink_EcommerceLabAgency&utm_id=Smartlink_EcommerceLabAgency&utm_term=Smartlink_EcommerceLabAgency&utm_content=Smartlink_EcommerceLabAgency" target="_blank"><button>Sale</button></a>
